run.log
nohup: ignoring input
  File "/workspaces/FIT5120_Fish_DLmodel/app.py", line 68
    app.run(host="0.0.0.0", port=5000)d
                                      ^
SyntaxError: invalid syntax
